examples/test/testpolicy14586.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy14586
  namespace: namespace477
spec:
  podSelector:
    matchLabels:
      key2: value40
      key20: value43
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key1: value48
          key18: value30
          key12: value22
      podSelector:
        matchLabels:
          key46: value19
          key32: value6
